--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Orelega+One&family=Roboto:ital@1&display=swap"
+    rel="stylesheet">
   <title>Music</title>
 </head>
 
